feat: vue imports, general adjusts

--- a/src/front/scss/export/bootstrap.scss
+++ b/src/front/scss/export/bootstrap.scss
@@ -8,6 +8,7 @@
   --blue-600: #182341;
   --blue-500: #1a2545;
   --green-600: #00a86b;
+  --green-400: #1fc588;
   --white-800: #faebd7;
   --red-700: #af1a1a;
 }
