--- a/src/front/views/signup/view-signup.ejs
+++ b/src/front/views/signup/view-signup.ejs
@@ -15,7 +15,7 @@
 
             <div class="container signup">
                 <div class="row content">
-                    <div class="col-md-3">
+                    <div class="col-lg-4 col-md-5 col-sm-6">
                         <div class="box">
 
                             <div class="row">
