--- a/src/front/scss/export/main.scss
+++ b/src/front/scss/export/main.scss
@@ -7,42 +7,42 @@
 @import "./loader.scss";
 
 body {
-    font-family: "Ubuntu", sans-serif !important;
+  font-family: "Ubuntu", sans-serif !important;
 }
 
 .cursor-pointer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .btn {
-    border-radius: 32px;
-    padding: 0 12px;
-    font-weight: bold;
-    font-size: 12px;
-    text-transform: uppercase;
+  border-radius: 32px;
+  padding: 0 12px;
+  font-weight: bold;
+  font-size: 12px;
+  text-transform: uppercase;
 }
 
 ::selection {
-    color: #fff;
-    background: var(--bs-primary);
-    text-shadow: none;
-  }
-  
-  ::-webkit-scrollbar {
-    width: 5px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
+  color: #fff;
+  background: var(--green-400);
+  text-shadow: none;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
