--- a/src/front/views/reset-password/view-reset-password.ejs
+++ b/src/front/views/reset-password/view-reset-password.ejs
@@ -16,7 +16,7 @@
             <div class="container reset-password">
 
                 <div class="row content">
-                    <div class="col-md-3">
+                    <div class="col-lg-4 col-md-5 col-sm-6">
                         <div class="box">
 
                             <div class="row">
